--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -88,7 +88,6 @@
     "typescript": "~5.4.5",
     "vite": "^6.3.4"
   },
-  "productName": "TypeAgent Shell",
   "fluidBuild": {
     "tasks": {
       "build:electron:esm": {
@@ -125,5 +124,6 @@
         }
       }
     }
-  }
+  },
+  "productName": "TypeAgent Shell"
 }
