can now extract offical website from wikipedia articles

--- a/ts/packages/azure-ai-foundry/package.json
+++ b/ts/packages/azure-ai-foundry/package.json
@@ -33,10 +33,12 @@
     "@azure/ai-agents": "^1.0.0-beta.3",
     "@azure/ai-projects": "^1.0.0-beta.8",
     "@azure/identity": "^4.10.0",
+    "@typeagent/agent-sdk": "workspace:*",
     "aiclient": "workspace:*",
     "async": "^3.2.5",
     "debug": "^4.4.0",
     "telemetry": "workspace:*",
+    "typeagent": "workspace:*",
     "typechat": "^0.1.1"
   },
   "devDependencies": {
