Use search term parser from knowpro

--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -58,6 +58,7 @@
     "chalk": "^5.4.1",
     "cheerio": "^1.1.0",
     "common-utils": "workspace:*",
+    "conversation-memory": "workspace:*",
     "cytoscape": "^3.32.0",
     "cytoscape-dagre": "^2.5.0",
     "dagre": "^0.8.5",
