started adding cloudfare domain lookup/resolution
added keys for GPT-5 + variants

--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -408,6 +408,7 @@
       "request": "launch",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/examples/websiteAliases/src/main.ts",
+      "args": [],
       "console": "externalTerminal",
       "outFiles": ["${workspaceFolder}/**/*.js"]
     },       
