--- a/ts/examples/websiteAliases/package.json
+++ b/ts/examples/websiteAliases/package.json
@@ -28,6 +28,7 @@
     "@azure/ai-agents": "^1.0.0-beta.3",
     "@azure/ai-projects": "^1.0.0-beta.8",
     "@azure/identity": "^4.10.0",
+    "aiclient": "workspace:*",
     "azure-ai-foundry": "workspace:*",
     "chalk": "^5.4.1",
     "code-processor": "workspace:*",
