--- a/ts/tools/scripts/getKeys.config.json
+++ b/ts/tools/scripts/getKeys.config.json
@@ -18,6 +18,14 @@
       "AZURE_OPENAI_ENDPOINT_EMBEDDING",
       "AZURE_OPENAI_API_KEY_DALLE",
       "AZURE_OPENAI_ENDPOINT_DALLE",
+      "AZURE_OPENAI_API_KEY_GPT_5",
+      "AZURE_OPENAI_ENDPOINT_GPT_5",
+      "AZURE_OPENAI_API_KEY_GPT_5_MINI",
+      "AZURE_OPENAI_ENDPOINT_GPT_5_MINI",
+      "AZURE_OPENAI_API_KEY_GPT_5_NANO",
+      "AZURE_OPENAI_ENDPOINT_GPT_5_NANO",
+      "AZURE_OPENAI_API_KEY_GPT_5_CHAT",
+      "AZURE_OPENAI_ENDPOINT_GPT_5_CHAT",
       "OPENAI_ENDPOINT_LOCAL",
       "OPENAI_API_KEY_LOCAL",
       "OPENAI_MODEL_LOCAL",
