--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -408,7 +408,7 @@
       "request": "launch",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/examples/websiteAliases/src/main.ts",
-      "args": [],
+      "args": ["--summary"],
       "console": "externalTerminal",
       "outFiles": ["${workspaceFolder}/**/*.js"]
     },       
