added fast entity resolution to prevent double resolution.
small refactoring of keyword lookup

--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -32,7 +32,8 @@
       "runtimeArgs": ["--sourcemap"],
       "env": {
         "REMOTE_DEBUGGING_PORT": "9222"
-      }
+      },
+      "outputCapture": "std"
     },
     {
       "name": "Player Service",
