Open unknown link perf enhancements (#1460)
- Replaced wikipedia search and bing with grounding with just opening
bing SERP.
- Increased URL keword cache to top 10000 domains
- Added opening SERP page when running "search <blah>" phrases
- Open phrase generation now happens in sub processes just in case URL
lookup fails (or is blocked by anti-virus)

--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -32,7 +32,8 @@
       "runtimeArgs": ["--sourcemap"],
       "env": {
         "REMOTE_DEBUGGING_PORT": "9222"
-      }
+      },
+      "outputCapture": "std"
     },
     {
       "name": "Player Service",
@@ -408,6 +409,7 @@
       "request": "launch",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/examples/websiteAliases/src/main.ts",
+      "args": [],
       "console": "externalTerminal",
       "outFiles": ["${workspaceFolder}/**/*.js"]
     },       
