knowpro: Azure Search experiments  (#1472)
Early experiments with Azure Search as backend. 
- Semantic Ref field schema
- Create semantic ref index
- Ingest entities into Azure Search

--- a/ts/packages/memory/storage/package.json
+++ b/ts/packages/memory/storage/package.json
@@ -31,8 +31,11 @@
     "tsc": "tsc -b"
   },
   "dependencies": {
+    "@azure/search-documents": "12.1.0",
+    "aiclient": "workspace:*",
     "better-sqlite3": "11.9.1",
     "debug": "^4.4.0",
+    "knowledge-processor": "workspace:*",
     "knowpro": "workspace:*",
     "typeagent": "workspace:*"
   },
