--- a/ts/packages/agents/browser/src/agent/manifest.json
+++ b/ts/packages/agents/browser/src/agent/manifest.json
@@ -9,6 +9,9 @@
       "description": "Enhanced website indexing with knowledge extraction"
     }
   },
+  "cachedActivities": {
+    "browsingWebPage": "shared"
+  },
   "schema": {
     "description": "Browser agent that allows you control an existing browser window and perform actions such as opening a new tab, closing a tab, scrolling, zooming and navigating to a specific URL.",
     "schemaFile": "./actionsSchema.mts",
