--- a/ts/.vscode/settings.json
+++ b/ts/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Knowpro",
         "ktype",
         "lightgray",
+        "Lucene",
         "NOCASE",
         "oclif",
         "openai",
