Search now uses configured search provider.

--- a/ts/packages/agents/browser/src/agent/tsconfig.json
+++ b/ts/packages/agents/browser/src/agent/tsconfig.json
@@ -7,7 +7,7 @@
     "outDir": "../../dist/agent",
     "types": ["node"]
   },
-  "include": ["./**/*"],
+  "include": ["./**/*", "../common/searchProvider.mts"],
   "exclude": ["./backup/**/*"],
   "references": [{ "path": "../common" }]
 }
