--- a/ts/packages/agents/browser/src/agent/manifest.json
+++ b/ts/packages/agents/browser/src/agent/manifest.json
@@ -14,14 +14,23 @@
   },
   "schema": {
     "description": "Browser agent that allows you control an existing browser window and perform actions such as opening a new tab, closing a tab, scrolling, zooming and navigating to a specific URL.",
-    "schemaFile": "./actionsSchema.mts",
-    "injected": true,
+    "schemaFile": "./actionsSchema.mts",    
     "schemaType": {
       "action": "BrowserActions",
       "entity": "BrowserEntities"
     }
   },
   "subActionManifests": {
+    "lookupAndAnswer": {
+      "defaultEnabled": true,
+      "transient": false,
+      "schema": {
+        "description": "Actions to lookup information from the web and answer user queries.",
+        "schemaFile": "./lookupAndAnswerSchema.mts",
+        "schemaType": "BrowserLookupActions",
+        "inject": true
+      }
+    },
     "external": {
       "defaultEnabled": false,
       "transient": true,
