Fix browser manifest injected property for lookupAndAnswer

--- a/ts/packages/agents/browser/src/agent/manifest.json
+++ b/ts/packages/agents/browser/src/agent/manifest.json
@@ -28,7 +28,7 @@
         "description": "Actions to lookup information from the web and answer user queries.",
         "schemaFile": "./lookupAndAnswerSchema.mts",
         "schemaType": "BrowserLookupActions",
-        "inject": true
+        "injected": true
       }
     },
     "external": {
