--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
   "black>=25.1.0",
   "build>=1.2.2.post1",
   "colorama>=0.4.6",
-  "coverage>=7.9.1",
+  "coverage[toml]>=7.9.1",
   "logfire>=4.1.0",
   "mcp[cli]>=1.12.1",
   "numpy>=2.2.6",
@@ -30,6 +30,7 @@ dependencies = [
   "pytest>=8.3.5",
   "pytest-asyncio>=0.26.0",
   "pytest-mock>=3.14.0",
+  "pytest-xdist>=3.8.0",
   "python-dotenv>=1.1.0",
   "typechat",
 ]
