Remove browser in the lookupAndAnwser type name

--- a/ts/packages/agents/browser/src/agent/manifest.json
+++ b/ts/packages/agents/browser/src/agent/manifest.json
@@ -27,7 +27,7 @@
       "schema": {
         "description": "Actions to lookup information from the web and answer user queries.",
         "schemaFile": "./lookupAndAnswerSchema.mts",
-        "schemaType": "BrowserLookupActions",
+        "schemaType": "LookupAndAnswerActions",
         "injected": true
       }
     },
