added action schema to the tests and added documentation on this change

--- a/ts/.vscode/settings.json
+++ b/ts/.vscode/settings.json
@@ -23,6 +23,7 @@
         "editor.defaultFormatter": "vscode.html-language-features"
     },
     "jest.virtualFolders": [
+        {"name": "actionSchema", "rootPath": "packages/actionSchema"},
         {"name": "aiclient", "rootPath": "packages/aiclient"},
         {"name": "api", "rootPath": "packages/api"},
         {"name": "cache", "rootPath": "packages/cache"},
