--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -332,7 +332,8 @@
       ],
       //"cwd": "${workspaceFolder}/packages/knowpro",
       //"cwd": "${workspaceFolder}/packages/memory/storage",
-      "cwd": "${workspaceFolder}/packages/memory/conversation",
+      //"cwd": "${workspaceFolder}/packages/memory/conversation",
+      "cwd": "${workspaceFolder}/packages/actionSchema",
       //"cwd": "${workspaceFolder}/packages/knowledgeProcessor",
       //"cwd": "${workspaceFolder}/packages/aiclient",
       "console": "integratedTerminal",
