--- a/ts/.vscode/settings.json
+++ b/ts/.vscode/settings.json
@@ -36,6 +36,7 @@
         {"name": "knowpro", "rootPath": "packages/knowpro"},
         {"name": "knowpro-conversation", "rootPath": "packages/memory/conversation"},
         {"name": "knowpro-storage", "rootPath": "packages/memory/storage"},
+        {"name": "browser", "rootPath": "packages/agents/browser"},
     ],
     "jest.runMode": "on-demand",
     "[json]": {
