--- a/ts/packages/defaultAgentProvider/package.json
+++ b/ts/packages/defaultAgentProvider/package.json
@@ -12,7 +12,8 @@
   "author": "Microsoft",
   "type": "module",
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/index.js",
+    "./test": "./dist/test/index.js"
   },
   "files": [
     "dist",
