--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
   "opentelemetry-instrumentation-httpx>=0.57b0",
   "pydantic>=2.11.4",
   "pydantic-ai-slim[openai]>=0.5.0",
-  "pyright==1.1.404",
+  "pyright>=1.1.405",
   "pytest>=8.3.5",
   "pytest-asyncio>=0.26.0",
   "pytest-mock>=3.14.0",
