--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -79,8 +79,8 @@
     "@types/debug": "^4.1.12",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
-    "electron": "35.2.1",
-    "electron-builder": "^26.0.16",
+    "electron": "^37.4.0",
+    "electron-builder": "^26.0.20",
     "electron-vite": "^3.1.0",
     "less": "^4.2.0",
     "rimraf": "^6.0.1",
