Remove parallel pytest, it makes no difference

--- a/python/ta/Makefile
+++ b/python/ta/Makefile
@@ -16,7 +16,7 @@ check: venv
 
 .PHONY: test
 test: venv
-	.venv/bin/pytest test -n 2 $(FLAGS)
+	.venv/bin/pytest test $(FLAGS)
 
 .PHONY: coverage
 coverage: venv
