Use microsoft contact email; add storage packages; add Homepage url

--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -7,7 +7,7 @@ name = "typeagent"
 version = "0.1.0"
 description = "TypeAgent implements an agentic memory framework."
 authors = [
-  { name = "Guido van Rossum", email = "gvanrossum@gmail.com" },
+  { name = "Guido van Rossum", email = "gvanrossum@microsoft.com" },
   { name = "Steven Lucco" },
   { name = "Umesh Madan" },
   { name = "Guido van Rossum" },
@@ -34,13 +34,20 @@ dependencies = [
   "typechat",
 ]
 
+[project.urls]
+Homepage = "https://github.com/microsoft/TypeAgent/tree/main/python/ta"
+
 [tool.setuptools]
 # Needed so setuptools doesn't complain about testdata.
 packages = [
     "typeagent",
     "typeagent.aitools",
     "typeagent.knowpro",
+    "typeagent.mcp",
     "typeagent.podcasts",
+    "typeagent.storage",
+    "typeagent.storage.memory",
+    "typeagent.storage.sqlite",
 ]
 
 [tool.pytest.ini_options]
