--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -105,7 +105,7 @@ jobs:
         run: |
           npm run start:dev 'prompt' 'why is the sky blue'
         working-directory: ts/packages/cli
-        continue-on-error: false
+        continue-on-error: true
 
       - name: Shell Tests - smoke (windows)
         if: ${{ runner.os == 'windows' }}
@@ -113,7 +113,7 @@ jobs:
         run: |
           npm run shell:smoke
         working-directory: ts/packages/shell
-        continue-on-error: false
+        continue-on-error: true
 
       - name: Shell Tests - smoke (linux)
         if: ${{ runner.os == 'Linux' }}
@@ -122,7 +122,7 @@ jobs:
           Xvfb :99 -screen 0 1600x1200x24 & export DISPLAY=:99
           npm run shell:smoke
         working-directory: ts/packages/shell
-        continue-on-error: false
+        continue-on-error: true
 
       - name: Live Tests
         if: ${{ runner.os == 'linux' }}
@@ -130,7 +130,7 @@ jobs:
         run: |
           npm run test:live
         working-directory: ts
-        continue-on-error: false
+        continue-on-error: true
 
       - name: Clean up Keys
         run: |
