try live tests on windows

--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -125,7 +125,7 @@ jobs:
         continue-on-error: true
 
       - name: Live Tests
-        if: ${{ runner.os == 'linux' }}
+        if: ${{ runner.os == 'windows' }}
         timeout-minutes: 60
         run: |
           npm run test:live
