removed dev branch from triggers.

--- a/.github/workflows/build-ts.yml
+++ b/.github/workflows/build-ts.yml
@@ -10,7 +10,7 @@ on:
   push:
     branches: ["main"]
   pull_request:
-    branches: ["main", "dev/robgruen/ci"]
+    branches: ["main"]
   merge_group:
     branches: ["main"]
 
