--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -8,9 +8,9 @@ name: smoke-tests
 on:
   workflow_dispatch:
   push:
-    branches: ["main", "dev/robgruen/ci"]
+    branches: ["main"]
   merge_group:
-    branches: ["main", "dev/robgruen/ci"]
+    branches: ["main"]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
