--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -35,7 +35,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "windows-latest"]
-        version: [20]
+        version: [22]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -125,7 +125,7 @@ jobs:
         continue-on-error: true
 
       - name: Live Tests
-        if: ${{ runner.os == 'linux' }}
+        if: ${{ runner.os == 'windows' }}
         timeout-minutes: 60
         run: |
           npm run test:live
