--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -49,7 +49,7 @@ jobs:
       # Users with write access can still run this workflow on a PR from a fork
       # For PRs from the same repo, we allow the workflow to run as normal
       - name: Get User Permission
-        if: ${{ github.event_name == 'pull_request'  }}
+        if: ${{ github.event_name != 'pull_request_target' && github.triggering_actor != 'github-merge-queue[bot]' }}
         id: checkAccess
         uses: actions-cool/check-user-permission@v2
         with:
@@ -58,7 +58,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Check User Permission
-        if: ${{ github.event_name == 'pull_request_target' && github.triggering_actor != 'github-merge-queue[bot]' && steps.checkAccess.outputs.require-result == 'false' }}
+        if: ${{ github.event_name != 'pull_request_target' && github.triggering_actor != 'github-merge-queue[bot]' && steps.checkAccess.outputs.require-result == 'false' }}
         run: |
           echo "${{ github.triggering_actor }} does not have permissions on this repo."
           echo "Current permission level is ${{ steps.checkAccess.outputs.user-permission }}"
