added pull_request_target triger

--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -9,8 +9,8 @@ on:
   workflow_dispatch:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]    
+  pull_request_target:
+    branches: ["main"]   
   merge_group:
     branches: ["main"]
 
