--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -9,8 +9,8 @@ on:
   workflow_dispatch:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]    
+  pull_request_target:
+    branches: ["main"]   
   merge_group:
     branches: ["main"]
 
@@ -40,9 +40,16 @@ jobs:
         version: [22]
 
     runs-on: ${{ matrix.os }}
-    steps:
 
+    steps:  
+
+      # The following two steps (permissions checks) ensure that only users with write access can run this workflow on a PR (except the merge queue bot)
+      # For PRs from forks we check the permissions of the user that triggered the workflow (github.triggering_actor)
+      # This means that if a user without write access opens a PR from a fork, they cannot run this workflow
+      # Users with write access can still run this workflow on a PR from a fork
+      # For PRs from the same repo, we allow the workflow to run as normal
       - name: Get User Permission
+        if: ${{ github.event_name != 'pull_request_target' && github.triggering_actor != 'github-merge-queue[bot]' }}
         id: checkAccess
         uses: actions-cool/check-user-permission@v2
         with:
@@ -51,7 +58,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Check User Permission
-        if: ${{ steps.checkAccess.outputs.require-result == 'false' && github.triggering_actor != 'github-merge-queue[bot]' }}
+        if: ${{ github.event_name != 'pull_request_target' && github.triggering_actor != 'github-merge-queue[bot]' && steps.checkAccess.outputs.require-result == 'false' }}
         run: |
           echo "${{ github.triggering_actor }} does not have permissions on this repo."
           echo "Current permission level is ${{ steps.checkAccess.outputs.user-permission }}"
