Enable global entity graph view when no entity is selected

--- a/ts/packages/defaultAgentProvider/data/config.json
+++ b/ts/packages/defaultAgentProvider/data/config.json
@@ -13,8 +13,7 @@
       "name": "list-agent"
     },
     "browser": {
-      "name": "browser-typeagent",
-      "execMode": "dispatcher"
+      "name": "browser-typeagent"
     },
     "desktop": {
       "name": "desktop-automation"
