--- a/dotnet/typeagent/src/knowpro/knowpro.csproj
+++ b/dotnet/typeagent/src/knowpro/knowpro.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>annotations</Nullable>
     <AssemblyName>TypeAgent.KnowPro</AssemblyName>
     <RootNamespace>TypeAgent.KnowPro</RootNamespace>
   </PropertyGroup>
