--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=67", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "typeagent"
+name = "typeagent-py"
 version = "0.1.0"
 description = "TypeAgent implements an agentic memory framework."
 authors = [
