Add YAML copyright

--- a/.github/workflows/release-py.yml
+++ b/.github/workflows/release-py.yml
@@ -1,3 +1,6 @@
+# Copyright (c) Microsoft Corporation.
+# Licensed under the MIT License.
+
 name: Release (PyPI via Trusted Publishing + uv)
 
 on:
