--- a/.github/workflows/release-py.yml
+++ b/.github/workflows/release-py.yml
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/<your-project-name>   # optional, UI nicety
+      url: https://pypi.org/p/typeagent-py
     permissions:
       id-token: write     # REQUIRED for Trusted Publishing (no tokens!)
       contents: read
