--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "typeagent-py"
 version = "0.1.4"
 description = "TypeAgent implements an agentic memory framework."
+readme = { file = "README.md", content-type = "text/markdown" }
 authors = [
   { name = "Guido van Rossum", email = "gvanrossum@microsoft.com" },
   { name = "Steven Lucco" },
