--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -57,3 +57,9 @@ jobs:
         working-directory: dotnet
         run: |
           msbuild.exe autoShell/AutoShell.sln /p:platform="Any CPU" /p:configuration="${{ matrix.configuration }}"
+      - name: Restore Packages (TypeAgent)
+        working-directory: dotnet
+        run: nuget restore typeagent/TypeAgent.sln
+      - name: Build Solution (TypeAgent)
+        working-directory: dotnet
+        run: msbuild.exe typeagent/TypeAgent.sln /p:platform="Any CPU" /p:configuration="${{ matrix.configuration }}"
