knowpro.NET updates (#1606)
Ongoing exploration:
First cuts of:
* Converted core knowpro interfaces
* Added dotnet typeAgent to build workflow
* Fixed warnings
* Ongoing

--- a/dotnet/typeagent/src/knowpro/knowpro.csproj
+++ b/dotnet/typeagent/src/knowpro/knowpro.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,5 +7,9 @@
     <AssemblyName>TypeAgent.KnowPro</AssemblyName>
     <RootNamespace>TypeAgent.KnowPro</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\common\common.csproj" />
+  </ItemGroup>
 
 </Project>
