Loading podcasts, generic types

--- a/dotnet/typeagent/examples/knowProConsole/knowProConsole.csproj
+++ b/dotnet/typeagent/examples/knowProConsole/knowProConsole.csproj
@@ -10,7 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\conversationMemory\conversationMemory.csproj" />
     <ProjectReference Include="..\..\src\common\common.csproj" />
+    <ProjectReference Include="..\..\src\knowproStorage\knowproStorage.csproj" />
     <ProjectReference Include="..\examplesLib\examplesLib.csproj" />
   </ItemGroup>
 
