--- a/dotnet/typeagent/src/knowproStorage/knowproStorage.csproj
+++ b/dotnet/typeagent/src/knowproStorage/knowproStorage.csproj
@@ -1,11 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>annotations</Nullable>
     <AssemblyName>TypeAgent.KnowPro.Storage</AssemblyName>
     <RootNamespace>TypeAgent.KnowPro.Storage</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\common\common.csproj" />
+    <ProjectReference Include="..\knowpro\knowpro.csproj" />
+  </ItemGroup>
 
 </Project>
