--- a/dotnet/typeagent/src/knowproStorage/knowproStorage.csproj
+++ b/dotnet/typeagent/src/knowproStorage/knowproStorage.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0-rc.1.25451.107" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\common\common.csproj" />
     <ProjectReference Include="..\knowpro\knowpro.csproj" />
   </ItemGroup>
