Sqlite provider, knowprotest

--- a/dotnet/typeagent/examples/knowProConsole/knowProConsole.csproj
+++ b/dotnet/typeagent/examples/knowProConsole/knowProConsole.csproj
@@ -13,6 +13,8 @@
     <ProjectReference Include="..\..\conversationMemory\conversationMemory.csproj" />
     <ProjectReference Include="..\..\src\common\common.csproj" />
     <ProjectReference Include="..\..\src\knowproStorage\knowproStorage.csproj" />
+    <ProjectReference Include="..\..\src\knowproTest\knowproTest.csproj" />
+    <ProjectReference Include="..\..\src\knowpro\knowpro.csproj" />
     <ProjectReference Include="..\examplesLib\examplesLib.csproj" />
   </ItemGroup>
 
