--- a/dotnet/typeagent/examples/examplesLib/examplesLib.csproj
+++ b/dotnet/typeagent/examples/examplesLib/examplesLib.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\common\common.csproj" />
+    <ProjectReference Include="..\..\src\knowpro\knowpro.csproj" />
   </ItemGroup>
 
 </Project>
